Front fixes
Squashed commit of the following:

* fix(box): update titleless box padding

* fix(box): remove redundant paragraph in shortcode

* add releasenote

* fix(boxes): increase padding

* fix(content): justify paragraphs

--- a/static/css/highlight_boxes.css
+++ b/static/css/highlight_boxes.css
@@ -3,7 +3,7 @@
     border-radius: 5px;
     border-top: 10px solid;
     margin-bottom: 24px;
-    padding: 12px;
+    padding: 12px 20px;
 }
 
 .highlight_box :is(h1, h2, h3, h4, h5, h6) {
@@ -12,7 +12,8 @@
 }
 
 .highlight_box .title {
-    margin: -12px;
+    margin: -12px -20px;
+    margin-bottom: 10px;
     padding-bottom: 8px;
     padding-left: 10px;
 }
@@ -21,6 +22,9 @@
     margin-right: 10px;
 }
 
+.highlight_box p:not(.title) {
+    margin: 4px 0;
+}
 
 /****** EXERCISE ******/
 
